# consistent-cpp

./: CMakeLists.txt  README.md  test_shared_ptr_safety.cpp
consistent/: consistent.cpp  consistent.h  hasher.cpp  hasher.h  member.h
include/consistent/: consistent.h  hasher.h  member.h
src/: consistent.cpp  member.cpp
